# budget_updater

./: .gitignore  BACKLOG.md  GCP_SETUP_CHECKLIST.md  MERGE_PLAN.md  MERGE_TASKS.md  PRD.md  README.md  RETROSPECTIVES.md  analyze_firstcard_duplicates_readonly.py  check_firstcard_duplicates.py  create_firstcard_merged.py  create_revolut_merged.py  create_strawberry_merged.py  fix_firstcard_duplicates.py  inspect_merged_file.py  manual_firstcard_duplicate_fix.sql  manual_firstcard_duplicate_fix_corrected.sql  pyproject.toml  read_revolut_sheet_data.py  read_strawberry_sheet_data.py  requirements.txt  run.py  sheet_analysis.md  test_bigquery_access.py
.cursor/rules/: core-modules.mdc  development-workflow.mdc  project-overview.mdc
data/: DATA_FORMATS_OVERVIEW.md  FIRSTCARD_DATA_FORMATS.md  REVOLUT_DATA_FORMAT.md  REVOLUT_MERGED_DATA_FORMAT.md  SEB_DATA_FORMAT.md  STRAWBERRY_DATA_FORMAT.md  firstcard.xlsx  firstcard_init.xlsx  revolut_init.xlsx  seb.xlsx  seb_init.xlsx  seb_micro.xlsx  strawberry.xls  strawberry_init.xlsx  ~$seb.xlsx
data/backup/: firstcard_250523.xlsx  revolut.xlsx  seb_all.xlsx  strawberry.xls
data_arkiv/: fc_250429-250515.xlsx  firstcard_new.xlsx  firstcard_older.xlsx  revolut_new.xlsx  seb_250501-250517.xlsx  seb_nano.xlsx  seb_new.xlsx  seb_small.xlsx
scripts/: README.md  README_firstcard_reverse_engineering.md  create_sheet_transactions_table.py  extract_firstcard_to_staging.py  query_transactions.py  reverse_engineer_firstcard.py  setup_bigquery_tables.py  setup_bigquery_tables_v2.py  transform_to_sheet_transactions.py  upload_firstcard_staging.py  upload_transactions.py  upload_transactions_v2.py  validate_firstcard_staging.py
src/budget_updater/: __init__.py  adk_agent_service.py  categorizer.py  config.py  main.py  models.py  parsers.py  sheets_api.py  transformation.py  vertex_ai.py
src/budget_updater/adk_categorizer/: agent.py  config.py  prompt.py
src/budget_updater/adk_categorizer/sub_agents/gmail_agent/: agent.py  config.py  gmail_tool.py  prompt.py
staging/: firstcard_staging_20230501_20250525_065659.json  firstcard_staging_20230501_20250525_065659.validation_report.json  firstcard_staging_20230501_20250525_065747.json  firstcard_staging_20230501_20250525_065747.upload_summary.json  firstcard_staging_20230501_20250525_065747.validation_report.json
tests/: test_categorizer.py  test_parsers.py  test_transformation.py
