[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "budget_updater"
version = "0.1.0"
description = "Bank Transaction Processor for Aspire Budget Sheet"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Mat Soldin"}
]
dependencies = [
    "pandas>=2.0.0",
    "google-api-python-client>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-auth-httplib2>=0.1.0",
    "google-cloud-aiplatform>=1.0.0",
    "tqdm>=4.60.0",
    "openpyxl>=3.0.0",
    "xlrd",
    "python-dotenv>=0.20.0",
    "google-adk>=0.5.0",
    "google-cloud-aiplatform[adk,agent_engines]>=1.91.0",
    "absl-py>=1.0.0",
    "beautifulsoup4>=4.12.0",
    "pydantic>=2.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "flake8",
]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"

[project.scripts]
budget-updater = "budget_updater.main:main" 